--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
